--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -9,3 +9,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wasm-bindgen = "0.2"
 js-sys = "0.3"
+
+[package.metadata.wasm-pack.profile.release]
+# Avoid wasm-pack trying to download/cache wasm-opt (binaryen) during builds.
+wasm-opt = false
